<resources>
    <string name="app_name">Hospital Room</string>
    <string name="Home">HOME</string>
    <string name="User">ชื่อผู้ใช้งานหลัก</string>
    <string name="pass">PASSWORD</string>
    <string name="pass1">รหัสผ่าน</string>
    <string name="pass2">CONFRIM PASSWORD</string>
    <string name="pass20">ยืนยันรหัสผ่าน</string>
    <string name="Type">TYPE</string>
    <string name="Type0">ประเภท</string>
    <string name="login">CONFRIM</string>
    <string name="logino">ยืนยัน</string>
    <string name="NameData">ข้อมูลผู้ใช้</string>
    <string name="NameSername">NAME</string>
    <string name="Nurse">Wich body are in diction of illness.</string>
    <string name="Nurse1">คุณไม่สบายส่วนไหน..?</string>
    <string name="Sex">SEX</string>
    <string name="Sex0">เพศ</string>
    <string name="Boy">Male</string>
    <string name="Boy0">ชาย</string>
    <string name="Girl">Female</string>
    <string name="Girl0">ผู้หญิง</string>
    <string name="Disease">โรคประจำตัว</string>
    <string name="Seve">SAVE</string>
    <string name="Seve0">บันทึก</string>
    <string name="Head">ศรีษะ</string>
    <string name="Head1">HEAD</string>
    <string name="Body">ลำตัว</string>
    <string name="Body1">BODY</string>
    <string name="Leg">ล่าง</string>
    <string name="Leg1">LEG</string>
    <string name="Yoka">15 yoga postures</string>
    <string name="Yoka0">โยคะ 15 กระบวนท่า</string>
    <string name="Yoka1">Yoga For Health</string>
    <string name="Yoka11">โยคะเพื่อสุขภาพ</string>
    <string name="Sick1">Feverish</string>
    <string name="Sick11">มีไข้</string>
    <string name="Sick2">Cough</string>
    <string name="Sick22">ไอ</string>
    <string name="Sick3">Headache</string>
    <string name="Sick33">ปวดศีรษะ</string>
    <string name="Sick4">Sore Throat</string>
    <string name="Sick44">เจ็บคอ</string>
    <string name="Sick5">Toothache</string>
    <string name="Sick55">ปวดฟัน</string>
    <string name="Sick6">Eye Red</string>
    <string name="Sick66">ตาแดง</string>
    <string name="Sick7">คัดจมูก</string>
    <string name="Sick77">Nasal Congestion</string>
    <string name="Sick8">ปวดท้อง</string>
    <string name="Sick88">Stomachache</string>
    <string name="Sick9">ท้องเสีย</string>
    <string name="Sick99">diarrhea</string>
    <string name="Ok">Live Well</string>
    <string name="Ok1">สบายดี</string>
    <string name="No">มีอาการ</string>
    <string name="No1">Symptoms</string>
    <string name="Yoga01">ท่าบริหารกล้ามเนื้อใบหน้าและดวงตา</string>
    <string name="Yoga02">ท่าบริหารกล้ามเนื้อต้นคอ</string>
    <string name="Yoga03">ท่าบริหารไหล่</string>
    <string name="Yoga04">ท่าก้มตัว</string>
    <string name="Yoga05">ท่ากางแขน</string>
    <string name="Yoga06">ท่าบริหารข้อเท้าและข้อเข่า</string>
    <string name="Yoga07">ท่ามือแตะเท้าสลับกัน</string>
    <string name="Yoga08">ท่าบริหารข้อเท้า</string>
    <string name="Yoga09">ท่าก้มตัว</string>
    <string name="Yoga10">ท่ายกเท้า</string>
    <string name="Yoga11">ท่าต้นไม้</string>
    <string name="Yoga12">ท่าวีรบุรุษ</string>
    <string name="Yoga13">ท่ายืดส่วนหลัง</string>
    <string name="Yoga14">ท่าบิดตัว</string>
    <string name="Yoga15">ท่าผ่อนคลาย</string>
    <string name="Yog01">ท่าที่ 1  ท่าบริหารกล้ามเนื้อใบหน้าและดวงตา</string>
    <string name="Yog02">ท่าที่ 2  ท่าบริหารกล้ามเนื้อต้นคอ</string>
    <string name="Yog03">ท่าที่ 3  ท่าบริหารไหล่</string>
    <string name="Yog04">ท่าที่ 4  ท่าก้มตัว</string>
    <string name="Yog05">ท่าที่ 5  ท่ากางแขน</string>
    <string name="Yog06">ท่าที่ 6  ท่าบริหารข้อเท้าและข้อเข่า</string>
    <string name="Yog07">ท่าที่ 7  ท่ามือแตะเท้าสลับกัน</string>
    <string name="Yog08">ท่าที่ 8  ท่าบริหารข้อเท้า</string>
    <string name="Yog09">ท่าที่ 9  ท่าก้มตัว</string>
    <string name="Yog10">ท่าที่ 10 ท่ายกเท้า</string>
    <string name="Yog11">ท่าที่ 11 ท่าต้นไม้</string>
    <string name="Yog12">ท่าที่ 12 ท่าวีรบุรุษ</string>
    <string name="Yog13">ท่าที่ 13 ท่ายืดส่วนหลัง</string>
    <string name="Yog14">ท่าที่ 14 ท่าบิดตัว</string>
    <string name="Yog15">ท่าที่ 15 ท่าผ่อนคลาย</string>
    <string name="VDO">Click VDO example</string>
    <string name="VDO1">คลิ๊กเข้าสู่ VDO ตัวอย่าง</string>
    <string name="ok">Choose your symptoms</string>
    <string name="ok1">เลือกอาการของคุณ</string>
    <string name="good">How are you..?</string>
    <string name="good1">คุณสบายดีไหม..?</string>
    <string name="Drug1">Name Medicine</string>
    <string name="Drug111">ข้อบ่งใช้</string>
    <string name="Drug0000">Detail</string>
    <string name="Drug2">Day</string>
    <string name="Drug222">Time User</string>
    <string name="Drug22">กินยากี่วัน</string>
    <string name="Drug4">Start day</string>
    <string name="Drug44">เริ่มกินยา</string>
    <string name="Drug6">Before Meals</string>
    <string name="Drug66">ก่อนอาหาร</string>
    <string name="Drug7">After Meals</string>
    <string name="Drug77">หลังอาหาร</string>
    <string name="Drud8">Morning</string>
    <string name="Drud88">เช้า</string>
    <string name="Drug9">Lunch</string>
    <string name="Drug99">กลางวัน</string>
    <string name="Drug10">Dinner</string>
    <string name="Drug100">เย็น</string>
    <string name="Drug11">Sleep</string>
    <string name="Drug1111">ก่อนนอน</string>
    <string name="Drug00">Duration</string>
    <string name="Menu1">หน้าแรก</string>
    <string name="Menu2">ข้อมูลผู้ใช้</string>
    <string name="Menu3">BODY</string>
    <string name="Menu4">Save Healthy</string>
    <string name="Menu5">Save Medicine</string>
    <string name="Menu6">YOGA</string>
    <string name="Disease1">-โรคกล้ามเนื้อตาอ่อนล้า ตาพร่า ตาลาย ปวดกระบอกตา</string>
    <string name="Disease2">-โรคขี้หลงขี้ลืม ความจำเสื่อม อัลไซเมอร์</string>
    <string name="Disease3">-โรคหูอื้อ หูน้ำหนวก</string>
    <string name="Disease4">-โรคหัวใจ</string>
    <string name="Disease5">-โรคความดันโลหิตสูง</string>
    <string name="Disease6">-โรคมะเร็ง</string>
    <string name="Disease7">-โรคไตวาย</string>
    <string name="Disease8">-โรคเบาหวาน</string>
    <string name="Disease9">-โรคไขข้ออักเสบ ข้อเสื่อม โรคเกาต์</string>
    <string name="Disease10">-โรคขัดเบา กระเพาะปัสสาวะอักเสบ</string>
    <string name="DisHead">โรคที่เกี่ยวกับศีรษะ</string>
    <string name="DisBody">โรคที่เกี่ยวกับทรวงอกและลำตัวส่วนบน</string>
    <string name="Disleg">โรคที่เกี่ยวกับลำตัวส่วนล่างจากเอวถึงปลายเท้า</string>
    <string name="DisNo">ไม่มีโรค</string>
    <string name="Hospital">HOSPITAL ROOM</string>
    <string name="Okhbl">คุณไม่สบายส่วนไหน..?</string>
    <string name="Mom">User Primary</string>
    <string name="Mom1">ผู้ใช้งานหลัก</string>
    <string name="Beby">User Share</string>
    <string name="Beby1">ผู้ใช้งานร่วม</string>
    <string name="Hlogin">LOGIN</string>
    <string name="Hlogin0">เข้าสู่ระบบ</string>
    <string name="Hlogin1">USER</string>
    <string name="Hlogin11">ชื่อผู้ใช้งาน</string>
    <string name="Hlogin2">PASSWORD</string>
    <string name="Hlogin22">รหัสผ่าน</string>
    <string name="Hlogin3">CONFIRM</string>
    <string name="Hlogin33">ยืนยัน</string>
    <string name="Hlogin4">CANCEL</string>
    <string name="Hlogin44">ยกเลิก</string>
    <string name="Hlogin5">REGISTER</string>
    <string name="Hlogin55">สมัครสมาชิก</string>
    <string name="Yo1">ท่าที่ 1</string>
    <string name="Yo2">ท่าที่ 2</string>
    <string name="Yo3">ท่าที่ 3</string>
    <string name="Yo4">ท่าที่ 4</string>
    <string name="Yo5">ท่าที่ 5</string>
    <string name="Yo6">ท่าที่ 6</string>
    <string name="Yo7">ท่าที่ 7</string>
    <string name="Yo8">ท่าที่ 8</string>
    <string name="Yo9">ท่าที่ 9</string>
    <string name="Yo10">ท่าที่ 10</string>
    <string name="Yo11">ท่าที่ 11</string>
    <string name="Yo12">ท่าที่ 12</string>
    <string name="Yo13">ท่าที่ 13</string>
    <string name="Yo14">ท่าที่ 14</string>
    <string name="Yo15">ท่าที่ 15</string>
    <string name="dis1">โรคตา
อาการที่บ่งบอกว่าคุณเป็นโรคตา
เกิดจากความผิดปกติเกี่ยวกับดวงตา โดยแบ่งกลุ่มอาการตามลักษณะของโรค ดังนี้
โรคที่เกี่ยวกับเปลือกตาและหนังตา
อาการที่สำคัญคือ ขนตาม้วนเข้าด้วยใน มักเป็นกับหนังตาล่าง เมื่อขนตาม้วนเข้า จะทำให้เกิดการระคายเคียงขึ้นกับดวงตาเกิดการอักเสบเรื้อรัง และจะมีผลในการมองเห็นได้ในที่สุด
สายตายาว
อาการของคนสายตายาว คือ การมองเห็นไม่ชัดในระยะใกล้ แต่สามารถเห็นได้อย่างชัดเจนในระยะที่ไกลออกไป ซื้อผู้สูงอายุทุกคนจะมีอาการนี้
โรคต้อกระจก
ดวงตาจะมัว เหมือนมีฝ้าบาง ๆ มาบังการมองเห็น บ้างก็เห็นเป็นภาพซ้อนในเวลากลางวัน แต่ในเวลากลางคืนภาพซ้อนจะหายไป
โรคต้อหิน
มีความรุนแรงกว่าต้อกระจก เพราะหากไม่รักษาให้ทันท่วงที ก็จะมีสิทธิ์ตาบอกสนิทได้
โรคจอประสาทตาเสื่อม
อาการที่สำคัญคือ มองภาพไม่ชัด หรือมองไม่เห็นเฉพาะตรงกลางของภาพ เห็นเพียงด้านข้าง ภาพบิดเบี้ยว หรือมีเงาดำบริเวณตรงกลาง
สาเหตุและผู้ที่เสี่ยงต่อการเป็นโรคตา
โรคตาเหล่านี้ มักเป็นในผู้สูงอายุ ที่เกิดการชราภาพของร่างกาย มักมีสาเหตุจากกรรมพันธุกรรมและการได้รับอุบัติเหตุ เกี่ยวกับดวงตามาก่อน ทั้งยังเกี่ยวเนื่องกับโรคประจำตัวอย่างโรคเบาหวานอีกด้วย</string>
    <string name="dis2">โรคขี้ลืม สมองเสื่อม
    ผู้สูงอายุที่เป็นโรคสมองเสื่อมนั้น มักจะไม่รู้ว่าตัวเองว่ามีพฤติกรรมที่เปลี่ยนแปลงไปจากเดิมอย่างไร แต่สำหรับคนใกล้ชิดแล้วจะสามารถสังเกตเห็น และคาดคะเนว่า ผู้ป่วยเป็นโรคสมองเสื่อนมข้าแล้ว โดยผู้ป่วยจะมีอาการต่าง ๆ ดังนี้
    -	หลงลืมเรื่องราวใหม่ ๆ ที่เพิ่งเกิดขึ้นได้ไม่นาน แต่ทว่ากลับจำเรื่องราวในอดีตได้ดี
    -	เล่าเรื่องเก่า ๆ ซ้ำไปซ้ำมา โดยจำไม่ได้ว่า เคยเล่าไปแล้ว และถามคำถามเดิม ๆ ซ้ำ ๆ ทั้งที่เพิ่งได้คำตอบไปเมื่อสักครู่
    -	หาของใช้ไม่พบ ทั้ง ๆ ที่ของใช้นั้น วางอยู่ในที่ประจำเสมอ สับสันเรื่อง วัน เวลา แบะสถานที่
    -	นึกคำที่จะพูดไม่ออก หรือบางครั้งก็ใช้คำพูดผิด ๆ ถูก ๆ
    สาเหตุและผู้ที่เสี่ยงต่อการเป็นโรค
    สาเหตุของโรคสมองเสื่อมอาจเกิดขึ้นได้จากหลายๆ กรณี มีทั้งที่สามารถแก้ไขได้และแก้ไขมาได้โดยแบ่งสาเหตุออกได้เป็นข้อ ๆ ดังนี้
    1.	เกิดจากความชราของผู้สูงอายุตั้งแต่ 65 ปีขึ้นไป
    2.	เกิดจากโรคต่าง ๆ เช่น โรคอัลไซเมอร์ โรคพาร์กินสัน โรคหลอดเลือดในสมองโพรงน้ำในสมองขยายตัว แต่ที่พบบ่อยมากที่สุด ก็คือ ภาวะสมองเสื่อมที่เกิดจากโรคอัลไซเมอร์
    3.	ติดสุราเรื้อรัง
    4.	ขาดวิตามินบี 12 แต่ทว่าพบได้น้อยในปัจจุบัน
    5.	ผู้ที่มีความเครียดสูง</string>
    <string name="dis3">โรคหู
    โรคที่เกี่ยวกับหูในผู้สูงอายุ คงหนีไม่พ้นโรคหูตึงและหูหนวก ซึ้งอาการจะเกิดขึ้นทีละน้อยตาที่อายุมากขึ้น จนตัวของผู้ป่วยเองไม่ทันสังเกตด้วยซ้ำ แต่สำหรับบุคคลรอบๆ ข้างแล้วจะสามารถจะสังเกตได้อย่างชัดเจนทีเดียว
    อาการที่บ่งบอกว่าคุณเป็นโรคหูตึง หูหนวก
    -	มักฟังคนอื่นพูดไม่เข้าใจ ได้ยินเสียงเบาและอู้อี้ต้องของพูดซ้ำบ่อยๆ
    -	การพูดคุยขณะที่มีเสียงดัง ยิ่งทำให้เข้าใจกันยากมากขึ้น
    -	คนอื่นมักบอกว่า คุณพูดดังเกินไป หรือเปิดวิทยุโทรทัศน์เสียงดังเกินไป
    -	มักไม่ได้ยินเสียง ในขณะที่คนรอบข้างได้ยินเหมือนกันหมด
    สาเหตุและผู้ที่เสี่ยงต่อการเป็นโรค
    อาการหูตึงหูหนวกนี้ มีสาเหตุมาจากการเสื่อมของเส้นประสาทหู  ซึ่งเป็นไปตามวัย หรือมีสภาวะแวดล้อมที่เร่งให้เกิดอาการเร็วขึ้น ได้แก่ อยู่ในที่ที่มีเสียงดังเป็นเวลานานเกินไป ได้รับสารเคมีหรือยาที่เป็นพิษต่อหูหรือมีโรคที่เกี่ยวข้องกับหัวใจหรือหลอดเลือด เป็นต้น</string>
    <string name="detail">Datail :</string>
</resources>