<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kaewmod.hospitalroom.MainActivity"
    android:background="@drawable/bggg">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"

        android:textSize="@dimen/h2"
        android:background="#4f51cc"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:textStyle="bold"
        android:onClick="clickLogin"
        android:nestedScrollingEnabled="false"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:background="#a8ffffff">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/imageView"
                    android:background="@drawable/login"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/Type"
                    android:id="@+id/textView81"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:textSize="@dimen/h2" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Mom"
                        android:id="@+id/radioButton"
                        android:checked="false"
                        android:textColor="#000000"
                        android:textSize="@dimen/h2" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Beby"
                        android:id="@+id/radioButton2"
                        android:checked="false"
                        android:textColor="#000000"
                        android:textSize="@dimen/h2" />
                </RadioGroup>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" >

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="45dp"
                        android:text="@string/NameSername"
                        android:id="@+id/textView"
                        android:textSize="@dimen/h"
                        android:textColor="#000000" />

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="45dp"
                        android:text="@string/pass"
                        android:id="@+id/textView2"
                        android:textSize="@dimen/h"
                        android:textColor="#000000" />

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText2" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="45dp"
                        android:text="@string/pass2"
                        android:id="@+id/textView3"
                        android:textSize="@dimen/h"
                        android:textColor="#000000" />

                    <EditText
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText3" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="45dp"
                        android:text="@string/Sex"
                        android:id="@+id/textView78"
                        android:textSize="@dimen/h"
                        android:textColor="#000000" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Boy"
                            android:id="@+id/radioButton3"
                            android:checked="false"
                            android:textSize="@dimen/h" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Girl"
                            android:id="@+id/radioButton4"
                            android:checked="false"
                            android:textSize="@dimen/h" />
                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="45dp"
                        android:text="@string/Disease"
                        android:id="@+id/textView80"
                        android:textSize="@dimen/h"
                        android:textColor="#000000" />

                    <ScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/scrollView2" >

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Disease1"
                                android:id="@+id/radioButton5" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Disease2"
                                android:id="@+id/radioButton6" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Disease3"
                                android:id="@+id/radioButton7" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Disease4"
                                android:id="@+id/radioButton8" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Disease5"
                                android:id="@+id/radioButton9" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Disease6"
                                android:id="@+id/radioButton10" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Disease7"
                                android:id="@+id/radioButton11" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Disease8"
                                android:id="@+id/radioButton12" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Disease9"
                                android:id="@+id/radioButton13" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Disease10"
                                android:id="@+id/radioButton14" />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/DisNo"
                                android:id="@+id/radioButton15" />
                        </RadioGroup>
                    </ScrollView>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
