<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/background">

    <Button
        android:text="@string/Seve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button35"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/h5"
        android:background="#4f51cc" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/button35"
        android:layout_margin="15dp"
        android:background="@color/colorPrimary">

        <TextView
            android:text="@string/Menu5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView33"
            android:textSize="@dimen/h4"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="viewStart"
            android:textStyle="normal|bold"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Drug1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView43"
                android:layout_weight="1.5"
                android:textSize="@dimen/h2"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText5"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Drug222"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView44"
                android:layout_weight="1"
                android:textSize="22dp"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editText6"
                android:layout_weight="1"
                android:inputType="number" />

            <TextView
                android:text="@string/Drug2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView45"
                android:layout_weight="1"
                android:textSize="@dimen/h1"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Drug4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView50"
                android:layout_weight="2"
                android:textSize="@dimen/h1"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText7"
                android:layout_weight="1" />

            <TextView
                android:text="/"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView51"
                android:layout_weight="1"
                android:textSize="22dp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText8"
                android:layout_weight="1" />

            <TextView
                android:text="/"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView52"
                android:layout_weight="1"
                android:textSize="22dp"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText11"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="1dp"
            android:padding="15dp">

            <TextView
                android:text="@string/detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView53"
                android:layout_weight="1"
                android:textSize="@dimen/h5"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <RadioButton
                    android:text="@string/Drud8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton8"
                    android:textSize="@dimen/h2"
                    android:textColor="@color/colorPrimaryDark" />

                <RadioButton
                    android:text="@string/Drug9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton7"
                    android:textSize="@dimen/h2"
                    android:textColor="@color/colorPrimaryDark" />

                <RadioButton
                    android:text="@string/Drug10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton6"
                    android:textSize="@dimen/h2"
                    android:textColor="@color/colorPrimaryDark" />

                <RadioButton
                    android:text="@string/Drug11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton5"
                    android:textSize="@dimen/h2"
                    android:textColor="@color/colorPrimaryDark" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/Drug00"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView54"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/h5"
                        android:textStyle="normal|bold" />
                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ragFood">

                    <RadioButton
                        android:text="@string/Drug6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton10"
                        android:layout_weight="1"
                        android:textSize="@dimen/h2"
                        android:textColor="@color/colorPrimaryDark" />

                    <RadioButton
                        android:text="@string/Drug7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton9"
                        android:layout_weight="1"
                        android:textSize="@dimen/h2"
                        android:textColor="@color/colorPrimaryDark" />

                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>